Add proper markdown exporting
